apps/base/coder-relay/coder-relay.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coder-relay
  namespace: coder-relay-system
spec:
  selector:
    app: coder-relay
  ports:
    - name: http
      port: 80
      targetPort: http
